# envoy

./: .env.example  .gitignore  .railwayignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  models.py  policy.py  runtime.py  storage.py
app/crm/: __init__.py  airtable.py  fake.py
app/llm/: __init__.py  fallback.py  gemini.py  service.py
docs/: action-agent-issue-drafts.md  action-agent-prd.md  demo-runbook.md
docs/issues/: AA-001-local-tracer-bullet.md  AA-002-hero-crm-resolution.md  AA-003-gemini-draft-generation.md  AA-004-real-airtable-local-demo.md  AA-005-railway-preview-deployment.md  AA-006-resilience-operator-safety.md  AA-007-demo-choreography-preview-reset.md  README.md
prompts/: job_change_email.md  job_change_email_fallback.txt  job_change_policy.yaml
scripts/: bootstrap.py  deploy_preview.py  replay_event.py  reset_preview.py  seed_demo.py  send_event.py
tests/integration/: test_hero_resolution_and_gating.py  test_local_tracer_bullet.py  test_readiness.py
tests/unit/: test_config.py  test_draft_service.py  test_runtime_resilience.py
